添加登录页面
引入eventbus

Signed-off-by: lizhongqiang <lizhongqiang@xiaomi.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MyAppTheme">
         <activity
-            android:name="com.lzq.sprout.ui.activity.MainActivity"
+            android:name="com.lzq.sprout.ui.activity.LoginActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
             <intent-filter>
