--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.lzq.sprout"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -31,4 +31,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.google.dagger:dagger:2.6'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.kingja.loadsir:loadsir:1.3.5'
 }
