--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,15 @@ dependencies {
     implementation "com.android.support:design:26.1.0"
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.google.dagger:dagger:2.6'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.kingja.loadsir:loadsir:1.3.5'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
